# PhysicsKinda

./: .gitmodules  Cargo.toml  ]
physics_core/: Cargo.toml
physics_core/macros/: Cargo.toml
physics_core/macros/src/: lib.rs
physics_core/src/: lib.rs
physics_core/src/core/: entity.rs
physics_core_macro/: Cargo.toml
physics_core_macro/src/: lib.rs
quirkythings/: Cargo.toml
quirkythings/src/: main.rs
src/: line_test.rs  main.rs
src/core/: mod.rs
src/core/physics/: collision.rs  engine.rs  engine_properties.rs  entity.rs  entity_manager.rs  mod.rs  position.rs  units.rs  vector.rs
src/core/physics/collision/: line.rs  rect.rs
src/core/physics/properties/: engine_props.rs  entity_props.rs  mod.rs
src/core/renderer/: mod.rs
src/core/renderer/ext/: entity.rs
src/core/rendering/: asset_manager.rs  debug.rs  mod.rs  renderer.rs
src/core/rendering/ext/: entity.rs
src/core/rendering/font/: manager.rs  mod.rs  presets.rs
src/core/rendering/texture/: manager.rs
struct_extension/: Cargo.toml
struct_extension/src/: lib.rs
