[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["struct_extension"]

[dependencies]
log = "0.4.17"
once_cell = "1.17.1"
sdl2 = { version = "0.35.2", features = ["ttf", "image"] }
struct_extension = { path = "./struct_extension" }
